Convert to Gradle.
This commit converts the project from Maven to Gradle by removing the
old Maven-related files such as `pom.xml` and the Maven Wrapper, and
replacing them with their Gradle counterparts (more or less).

Comparing the artifacts from Maven and Gradle indicates no significant
differences in the resulting jar-files, and a quick test of the plugin
shows that things are still working as expected.

Bits of `build.gradle.kts` may need a bit of a tune-up later down the
road, e.g. the test sources "hack" put in place. It may be cleaner to
omit this hack and just suck up having to repeat dependencies, but in
that case, it might be better to embrace the "libs" file instead of
having to repeat dependencies in full.

Note that this commit changes the caching mechanism used in the GitHub
Actions build workflow, opting for the one built into `setup-java`.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,19 +17,13 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-
-      - name: 'Cache dependencies'
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          cache: 'gradle'
 
       - name: 'Build, test, and package'
-        run: mvn -B package --file pom.xml
+        run: ./gradlew build --no-daemon
 
       - name: 'Upload artifact'
         uses: actions/upload-artifact@v3
         with:
           name: MobArena.jar
-          path: target/MobArena.jar
+          path: build/libs/MobArena.jar
