--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -15,6 +15,7 @@ require-empty-inv-spec: false
 pvp-enabled: false
 monster-infight: false
 allow-teleporting: false
+monster-teleporting: false
 spectate-on-death: true
 auto-leave-on-end: false
 share-items-in-arena: true
