--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: MobArena.jar
-          path: build/libs/MobArena.jar
+          path: build/libs/MobArena-*.jar
