Add `tiers` wave reward section.
This commit introduces a new optional wave rewards section, `tiers`,
which allows server owners to configure rewards that "upgrade" over
time. This makes it possible to create reward configurations where
(some of) the rewards don't stack as the waves progress, but instead
change into different rewards. The most obvious use case is wanting to
grant an armor set for beating a specific wave, but a _better_ set for
beating a later wave, without granting both sets.

Turns out this was a lot easier than I thought it would be. We didn't
even need a rework of anything, and the Things API didn't even need to
adapt in any way. As an added bonus, we managed to get the associated
GitHub issue wrapped up before it turned 8 years old. Neat!

Closes #346

--- a/src/main/resources/res/rewards.yml
+++ b/src/main/resources/res/rewards.yml
@@ -7,3 +7,7 @@ waves:
         '7': minecart, chest_minecart, furnace_minecart
         '13': iron_sword, iron_pickaxe, iron_shovel
         '16': diamond_sword
+    tiers:
+        '4': diamond
+        '11': diamond:10
+        '17': diamond:25
